--- a/rlagents.ipynb
+++ b/rlagents.ipynb
@@ -22,7 +22,8 @@
     "import threading\n",
     "import gym\n",
     "from gym import spaces,Env\n",
-    "import sys"
+    "import sys\n",
+    "from decision_tree import DecisionTree"
    ]
   },
   {
@@ -125,18 +126,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "afea58b9-6c56-40c8-a101-32cba908483e",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Ha\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "OHLCV_COLS=['Open_n','High_n','Low_n','Close_n','Volume_n']\n",
     "TA_COLS=['SMA_10', 'SMA_20','VOL_SMA_20','RSI_14','BBL_5_2.0','BBM_5_2.0','BBU_5_2.0',\n",
@@ -162,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "358be953-26c6-4e1a-ad66-1a30a5db52f5",
    "metadata": {},
    "outputs": [],
@@ -262,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "52934c55-8b6b-48ab-91cb-f01a606844cd",
    "metadata": {},
    "outputs": [],
@@ -279,9 +272,69 @@
     "        self.perception.perceive_reward=self.perceive_reward\n",
     "    def call_model(self,state):\n",
     "        # super().act(state)\n",
+    "        print(state, self.action_space.sample())\n",
     "        return self.action_space.sample()\n",
     "    def perceive_reward(self,reward):\n",
     "        return reward[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "3f17e7ed",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class DTAgent(StratAgent):\n",
+    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False),dim=DIM,verbose=1,win=5,metarl=True):\n",
+    "        n_steps,self.use_alt_data=myargs[0],myargs[1]\n",
+    "        observation_space=spaces.Box(high=np.inf*np.ones(dim),low=-np.inf*np.ones(dim))\n",
+    "        super().__init__()\n",
+    "        self.actor.percept_to_state=self.percept_to_state\n",
+    "        # self.perception.perceive_reward=self.perceive_reward\n",
+    "    def load_model(self,filepath='./saved_models/PPO0.pth'):\n",
+    "        with open(filepath, 'rb') as f:\n",
+    "            self.model = pickle.load(filepath)\n",
+    "            \n",
+    "    def percept_to_state(self,perceived_state):\n",
+    "        # self.logL+=[{'printing perceived_state':perceived_state}]\n",
+    "        percept=perceived_state['percept']\n",
+    "        if self.use_alt_data:\n",
+    "            dstate=torch.tensor(percept[0][COLS].iloc[-1].values)\n",
+    "            gstate=percept[1]\n",
+    "            state=torch.concat((dstate,gstate))\n",
+    "        else: state=torch.tensor(percept[COLS].iloc[-1].values)\n",
+    "        return state\n",
+    "    def clear_sar_memory(self):\n",
+    "        if len(self.memory.sar_memory)==0: return\n",
+    "        t0=max(self.time-1,0)\n",
+    "        zero_state=np.zeros(self.memory.sar_memory[0]['state'].shape[0])\n",
+    "        for w in range(self.win):\n",
+    "            if self.time-w in self.memory.sar_memory:\n",
+    "                self.memory.sar_memory[self.time-w]['state']=zero_state\n",
+    "                self.memory.sar_memory[self.time-w]['action']=[0,0,0]\n",
+    "                self.memory.sar_memory[self.time-w]['reward']=0\n",
+    "    def check_entry_batch(self,dfD):\n",
+    "        if self.use_alt_data: \n",
+    "            gfD={t:self.gstateD[dfD[t].iloc[-1]['Date']] if dfD[t].iloc[-1]['Date'] \n",
+    "                 in self.gstateD else torch.zeros(3) for t in dfD}\n",
+    "        decisionsD,stopD,targetD={},{},{}\n",
+    "        if self.act_on_entry(): \n",
+    "            limit={0:.5,1:1,2:2}\n",
+    "            trt=self.scantickers[self.tidx]\n",
+    "            df=dfD[trt]\n",
+    "            if self.use_alt_data: action=self.act((df,gfD[trt]))\n",
+    "            else: action=self.act(df)\n",
+    "            decisionsD[trt]=action[0]-1\n",
+    "            stopD[trt]=limit[action[1]]\n",
+    "            targetD[trt]=limit[action[2]]\n",
+    "        return decisionsD,stopD,targetD\n",
+    "    def reward(self,reward):\n",
+    "        if type(reward[0])==list: \n",
+    "            if len(reward[0])==0: rew=0\n",
+    "            else: rew=reward[0][0]['ppnl']\n",
+    "            reward=(rew,reward[1],reward[2])\n",
+    "        return super().reward(reward)"
    ]
   },
   {
