--- a/rlagents_test.ipynb
+++ b/rlagents_test.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "b845872c-48f2-4622-9925-9246e444570b",
    "metadata": {},
    "outputs": [],
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "490b5786-dc7a-4403-bfc6-9f5934ddcd96",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "id": "ee07310c-dd1c-4d26-b301-d329a01cd15c",
    "metadata": {},
    "outputs": [],
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "id": "d7889ded-dd8c-4c73-aadd-687cf98ddbb0",
    "metadata": {},
    "outputs": [],
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "27681588-e85b-4818-b7f9-9e8aca7d87cf",
    "metadata": {},
    "outputs": [
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "8da69070-9830-44a9-bd5d-0f9800a0c613",
    "metadata": {},
    "outputs": [
@@ -223,7 +223,7 @@
     }
    ],
    "source": [
-    "from rlagents import RLStratAgentDyn"
+    "from rlagents import RLStratAgentDyn, RandomStratAgent"
    ]
   },
   {
