--- a/rulestrats.ipynb
+++ b/rulestrats.ipynb
@@ -208,6 +208,59 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "id": "cc36d51a",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'RuleStrat' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m \u001b[39mclass\u001b[39;00m \u001b[39mDTStrat\u001b[39;00m(RuleStrat):\n\u001b[1;32m      2\u001b[0m     \u001b[39mdef\u001b[39;00m \u001b[39m__init__\u001b[39m(\u001b[39mself\u001b[39m,th\u001b[39m=\u001b[39m\u001b[39m.00025\u001b[39m):\n\u001b[1;32m      3\u001b[0m         \u001b[39msuper\u001b[39m(DTStrat,\u001b[39mself\u001b[39m)\u001b[39m.\u001b[39m\u001b[39m__init__\u001b[39m()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'RuleStrat' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "class DTStrat(RuleStrat):\n",
+    "    def __init__(self,th=.00025):\n",
+    "        super(DTStrat,self).__init__()\n",
+    "        self.logL=[]\n",
+    "        self.th=th\n",
+    "        self.model_type='rule_based'\n",
+    "        self.data_cols=['Close','datetime']\n",
+    "    def check_entry_batch(self,dfD):\n",
+    "        # return always_buy(dfD)\n",
+    "        print(dfD)\n",
+    "        decisionsD={t:0 for t in dfD}\n",
+    "        stopD={t:0 for t in dfD}\n",
+    "        targetD={t:0 for t in dfD}\n",
+    "        dataD={}\n",
+    "        log_entry={}\n",
+    "        for t in dfD.keys():\n",
+    "            data=dfD[t]\n",
+    "            if data.shape[0]>2:\n",
+    "                r=np.log(data['Close']/data['Close'].shift(1)).dropna()\n",
+    "                m=r.rolling(30).mean().values\n",
+    "                if m[-1]>self.th: decisionsD[t]=-1\n",
+    "                elif m[-1]<-self.th: decisionsD[t]=1\n",
+    "                else: decisionsD[t]=0\n",
+    "        return decisionsD,stopD,targetD\n",
+    "    def exit_predicate(self,row,df):\n",
+    "        # return False\n",
+    "        data=df\n",
+    "        r=np.log(data['Close']/data['Close'].shift(1)).dropna()\n",
+    "        m=r.rolling(20).mean().values\n",
+    "        if row['quant']>0 and m[-1]<self.th/3: return True\n",
+    "        elif row['quant']<0 and m[-1]>-self.th/3: return True\n",
+    "        else: return False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 18,
    "id": "60e90844-5b84-45c2-a37a-9d8741cc98ae",
    "metadata": {},
@@ -264,7 +317,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.12"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
