--- a/feeds.ipynb
+++ b/feeds.ipynb
@@ -393,7 +393,7 @@
     "        self.ndata={t:self.ndata[t] for t in tickers}\n",
     "        self.ncounter={t:self.ncounter[t] for t in tickers}\n",
     "        self.eods={t:self.eods[t] for t in tickers}\n",
-    "        self.datesQ={t:self.datesQ[t] for t in tickers}"
+    "        self.datesQ={t:self.datesQ[t] for t in tickers}\n"
    ]
   },
   {
