--- a/gather_results.ipynb
+++ b/gather_results.ipynb
@@ -26,7 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_folder = 'results/rl_0/test'"
+    "base_folder = 'results/rl_01/test'"
    ]
   },
   {
@@ -39,8 +39,8 @@
     "\n",
     "for folder in os.listdir(base_folder):\n",
     "    model_name = folder\n",
-    "    if model_name == 'real_data_model.pth':\n",
-    "        continue\n",
+    "    # if model_name == 'real_data_model.pth':\n",
+    "    #     continue\n",
     "    values = [0 for i in range(8)]\n",
     "    for data_folder in os.listdir(os.path.join(base_folder, folder, 'realdata')):\n",
     "        num = [order_dict[k] for k in order_dict if k in data_folder][0]\n",
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -78,151 +78,59 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>real_data_model_1_1.pth</th>\n",
-       "      <th>real_data_model_1_2.pth</th>\n",
-       "      <th>real_data_model_1_3.pth</th>\n",
-       "      <th>real_data_model_1_4.pth</th>\n",
-       "      <th>real_data_model_1_5.pth</th>\n",
-       "      <th>real_data_model_1_6.pth</th>\n",
-       "      <th>real_data_model_1_7.pth</th>\n",
-       "      <th>real_data_model_1_8.pth</th>\n",
-       "      <th>real_data_model_1_9.pth</th>\n",
+       "      <th>real_model_01.pth</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>0.2±3.1</td>\n",
-       "      <td>0.1±3.2</td>\n",
-       "      <td>0.1±2.7</td>\n",
-       "      <td>0.3±2.6</td>\n",
-       "      <td>0.0±2.8</td>\n",
-       "      <td>0.2±2.5</td>\n",
        "      <td>0.3±2.5</td>\n",
-       "      <td>0.0±2.6</td>\n",
-       "      <td>0.1±2.6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>-0.1±2.7</td>\n",
-       "      <td>0.0±2.8</td>\n",
-       "      <td>0.2±2.5</td>\n",
-       "      <td>0.1±2.3</td>\n",
-       "      <td>0.1±2.0</td>\n",
-       "      <td>-0.0±2.2</td>\n",
-       "      <td>0.1±2.3</td>\n",
-       "      <td>-0.0±2.2</td>\n",
-       "      <td>0.0±2.2</td>\n",
+       "      <td>-0.0±2.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>-0.2±2.5</td>\n",
-       "      <td>0.1±2.5</td>\n",
-       "      <td>-0.2±2.5</td>\n",
-       "      <td>-0.3±2.5</td>\n",
-       "      <td>-0.3±2.7</td>\n",
-       "      <td>-0.3±2.6</td>\n",
-       "      <td>-0.3±2.5</td>\n",
-       "      <td>-0.2±2.4</td>\n",
        "      <td>-0.3±2.5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>0.0±2.0</td>\n",
-       "      <td>0.4±2.0</td>\n",
-       "      <td>0.1±2.1</td>\n",
-       "      <td>-0.0±1.9</td>\n",
        "      <td>0.2±2.0</td>\n",
-       "      <td>0.0±1.9</td>\n",
-       "      <td>0.0±2.0</td>\n",
-       "      <td>-0.0±2.1</td>\n",
-       "      <td>-0.0±2.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>0.3±2.4</td>\n",
-       "      <td>-0.2±2.6</td>\n",
-       "      <td>-0.1±3.0</td>\n",
-       "      <td>-0.1±2.7</td>\n",
-       "      <td>0.1±2.6</td>\n",
-       "      <td>-0.2±2.6</td>\n",
-       "      <td>-0.2±2.7</td>\n",
-       "      <td>0.2±2.8</td>\n",
-       "      <td>-0.2±2.6</td>\n",
+       "      <td>0.1±3.3</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>0.1±2.0</td>\n",
-       "      <td>0.2±1.6</td>\n",
-       "      <td>0.3±1.9</td>\n",
-       "      <td>-0.1±1.8</td>\n",
-       "      <td>0.1±1.8</td>\n",
-       "      <td>-0.0±1.6</td>\n",
-       "      <td>0.1±1.7</td>\n",
-       "      <td>0.0±1.6</td>\n",
-       "      <td>0.0±1.7</td>\n",
+       "      <td>0.2±1.7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>-0.1±3.0</td>\n",
-       "      <td>-0.2±2.9</td>\n",
-       "      <td>-0.0±2.9</td>\n",
-       "      <td>-0.0±2.7</td>\n",
-       "      <td>0.2±3.0</td>\n",
-       "      <td>-0.1±3.1</td>\n",
-       "      <td>-0.1±3.0</td>\n",
-       "      <td>0.0±2.9</td>\n",
-       "      <td>-0.0±3.1</td>\n",
+       "      <td>0.0±3.1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>-0.2±2.7</td>\n",
-       "      <td>-0.4±2.8</td>\n",
-       "      <td>-0.6±3.5</td>\n",
-       "      <td>-0.2±3.1</td>\n",
-       "      <td>-0.2±3.2</td>\n",
        "      <td>-0.3±3.3</td>\n",
-       "      <td>-0.2±3.1</td>\n",
-       "      <td>-0.4±3.4</td>\n",
-       "      <td>-0.3±3.2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  real_data_model_1_1.pth real_data_model_1_2.pth real_data_model_1_3.pth  \\\n",
-       "0                 0.2±3.1                 0.1±3.2                 0.1±2.7   \n",
-       "1                -0.1±2.7                 0.0±2.8                 0.2±2.5   \n",
-       "2                -0.2±2.5                 0.1±2.5                -0.2±2.5   \n",
-       "3                 0.0±2.0                 0.4±2.0                 0.1±2.1   \n",
-       "4                 0.3±2.4                -0.2±2.6                -0.1±3.0   \n",
-       "5                 0.1±2.0                 0.2±1.6                 0.3±1.9   \n",
-       "6                -0.1±3.0                -0.2±2.9                -0.0±2.9   \n",
-       "7                -0.2±2.7                -0.4±2.8                -0.6±3.5   \n",
-       "\n",
-       "  real_data_model_1_4.pth real_data_model_1_5.pth real_data_model_1_6.pth  \\\n",
-       "0                 0.3±2.6                 0.0±2.8                 0.2±2.5   \n",
-       "1                 0.1±2.3                 0.1±2.0                -0.0±2.2   \n",
-       "2                -0.3±2.5                -0.3±2.7                -0.3±2.6   \n",
-       "3                -0.0±1.9                 0.2±2.0                 0.0±1.9   \n",
-       "4                -0.1±2.7                 0.1±2.6                -0.2±2.6   \n",
-       "5                -0.1±1.8                 0.1±1.8                -0.0±1.6   \n",
-       "6                -0.0±2.7                 0.2±3.0                -0.1±3.1   \n",
-       "7                -0.2±3.1                -0.2±3.2                -0.3±3.3   \n",
-       "\n",
-       "  real_data_model_1_7.pth real_data_model_1_8.pth real_data_model_1_9.pth  \n",
-       "0                 0.3±2.5                 0.0±2.6                 0.1±2.6  \n",
-       "1                 0.1±2.3                -0.0±2.2                 0.0±2.2  \n",
-       "2                -0.3±2.5                -0.2±2.4                -0.3±2.5  \n",
-       "3                 0.0±2.0                -0.0±2.1                -0.0±2.0  \n",
-       "4                -0.2±2.7                 0.2±2.8                -0.2±2.6  \n",
-       "5                 0.1±1.7                 0.0±1.6                 0.0±1.7  \n",
-       "6                -0.1±3.0                 0.0±2.9                -0.0±3.1  \n",
-       "7                -0.2±3.1                -0.4±3.4                -0.3±3.2  "
+       "  real_model_01.pth\n",
+       "0           0.3±2.5\n",
+       "1          -0.0±2.3\n",
+       "2          -0.3±2.5\n",
+       "3           0.2±2.0\n",
+       "4           0.1±3.3\n",
+       "5           0.2±1.7\n",
+       "6           0.0±3.1\n",
+       "7          -0.3±3.3"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,13 +139,6 @@
     "df = pd.DataFrame(final_data)\n",
     "df.reindex(sorted(df.columns), axis=1)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
