--- a/teststrategy.ipynb
+++ b/teststrategy.ipynb
@@ -46,24 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 30,
    "id": "0abacb72-0e8e-437c-b546-7389517972c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "importing Jupyter notebook from backtest.ipynb\n",
-      "importing Jupyter notebook from feeds.ipynb\n",
-      "importing Jupyter notebook from synfeed.ipynb\n",
-      "importing Jupyter notebook from india_calendar.ipynb\n",
-      "importing Jupyter notebook from featfuncs.ipynb\n",
-      "importing Jupyter notebook from feed_env.ipynb\n",
-      "importing Jupyter notebook from validation.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -73,12 +59,13 @@
     "from validation import Validate\n",
     "from featfuncs import feat_aug,add_addl_features_feed,add_ta_features_feed,add_sym_feature_feed\n",
     "from decision_tree import DecisionTree\n",
-    "import pickle"
+    "import pickle\n",
+    "import pandas as pd"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 31,
    "id": "449d5b84-b234-4de1-9328-2dd70d338ffa",
    "metadata": {},
    "outputs": [],
@@ -97,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
    "id": "1324a562-0870-4af8-be68-92bfa0406b88",
    "metadata": {},
    "outputs": [],
@@ -109,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 33,
    "id": "00238be4-5614-429f-a717-fcd50c5aafe1",
    "metadata": {},
    "outputs": [],
@@ -120,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "43bcb6f2-f5e9-42ed-81c9-4f18b0183ff7",
    "metadata": {},
    "outputs": [
@@ -149,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "bf9e2989-f187-462b-8e24-5b3c0602dd98",
    "metadata": {},
    "outputs": [],
@@ -159,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "id": "9fc44cef-9c8f-44f3-8571-43a098871edb",
    "metadata": {},
    "outputs": [],
@@ -169,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "id": "d13468a2",
    "metadata": {},
    "outputs": [],
@@ -211,17 +198,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "id": "22478bae",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dtStrat = DTStrat()"
+    "dtStrat = DTStrat(model_path='saved_models/dt_optimal_synthetic_all_hp11.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 35,
    "id": "99b7162a",
    "metadata": {},
    "outputs": [
@@ -230,24 +217,24 @@
      "output_type": "stream",
      "text": [
       "                                                                                                         Index: 0\n",
-      "                                                                                                         Open_n_ma_10_slope_5_changelen_polarity >= 1\n",
-      "                                                                                                         Gini: 0.49802137200559005\n",
-      "                                                                                                         Samples: 922\n",
-      "                                                                                                         Values: {1: 490, -1: 432}\n",
-      "                                                                                                         Class: 1\n",
+      "                                                                                                         Open-Close_polarity >= 1\n",
+      "                                                                                                         Gini: 0.4999364011532591\n",
+      "                                                                                                         Samples: 1064\n",
+      "                                                                                                         Values: {-1: 538, 1: 526}\n",
+      "                                                                                                         Class: -1\n",
       "\n",
       "                                   Index: 1                                                                                                                                    Index: 2\n",
-      "                                   Close_slope_1_polarity >= 1                                                                                                                 RSI_14_ma_1_val >= 2\n",
-      "                                   Gini: 0.1721725837955741                                                                                                                    Gini: 0.2380345335588614\n",
-      "                                   Samples: 473                                                                                                                                Samples: 449\n",
-      "                                   Values: {1: 428, -1: 45}                                                                                                                    Values: {-1: 387, 1: 62}\n",
-      "                                   Class: 1                                                                                                                                    Class: -1\n",
+      "                                   Open-High_ma_1-Open-High_ma_50_val >= 1                                                                                                     Open-Close_ma_1-Open-Close_ma_20_val >= 2\n",
+      "                                   Gini: 0.13447160763394628                                                                                                                   Gini: 0.1372941635703857\n",
+      "                                   Samples: 538                                                                                                                                Samples: 526\n",
+      "                                   Values: {-1: 499, 1: 39}                                                                                                                    Values: {1: 487, -1: 39}\n",
+      "                                   Class: -1                                                                                                                                   Class: 1\n",
       "\n",
       "Index: 3                                                              Index: 4                                                              Index: 5                                                              Index: 6\n",
-      "Gini: 0.054956020644854275                                            Gini: 0.481859410430839                                               Gini: 0.48405612244897955                                             Gini: 0.1366923709444543\n",
-      "Samples: 389                                                          Samples: 84                                                           Samples: 56                                                           Samples: 393\n",
-      "Values: {1: 378, -1: 11}                                              Values: {1: 50, -1: 34}                                               Values: {1: 33, -1: 23}                                               Values: {-1: 364, 1: 29}\n",
-      "Class: 1                                                              Class: 0                                                              Class: 0                                                              Class: -1\n",
+      "Gini: 0.04740284220360924                                             Gini: 0.47417355371900827                                             Gini: 0.49560546875                                                   Gini: 0.017166095088173128\n",
+      "Samples: 494                                                          Samples: 44                                                           Samples: 64                                                           Samples: 462\n",
+      "Values: {-1: 482, 1: 12}                                              Values: {1: 27, -1: 17}                                               Values: {-1: 35, 1: 29}                                               Values: {1: 458, -1: 4}\n",
+      "Class: -1                                                             Class: 0                                                              Class: 0                                                              Class: 1\n",
       "\n"
      ]
     }
@@ -258,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 36,
    "id": "ba86584c-0947-467f-bc20-ec5b3861be47",
    "metadata": {},
    "outputs": [],
@@ -268,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 37,
    "id": "da8afe2b-8ff7-4023-a08e-7fcc77b0b04d",
    "metadata": {},
    "outputs": [],
@@ -286,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 38,
    "id": "0742b6ae-da3c-4d24-a392-762ca2433314",
    "metadata": {},
    "outputs": [],
@@ -296,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 39,
    "id": "87f1cb97-c120-45e8-b2f1-90e739766b85",
    "metadata": {},
    "outputs": [],
@@ -306,7 +293,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "id": "4216b766",
    "metadata": {},
    "outputs": [],
@@ -315,12 +302,12 @@
     "    rewards = [bt.results[t][d]['tot'] for t in bt.results for d in bt.results[t]]\n",
     "    reward_avg = np.mean(rewards)\n",
     "    reward_std = np.std(rewards)\n",
-    "    print(f'{reward_avg:.1f}\\u00B1{reward_std:.1f}')"
+    "    return (f'{reward_avg:.1f}\\u00B1{reward_std:.1f}')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 41,
    "id": "3d631e0b-8315-46d0-b418-152ad969c3ed",
    "metadata": {},
    "outputs": [],
@@ -330,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 42,
    "id": "70b3a697",
    "metadata": {},
    "outputs": [
@@ -338,29 +325,92 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading from datafeed_augdata_03-Feb-2022_5m_True_False.pkl!\n",
-      "0.0±2.4\n",
-      "datafeed_augdata_03-Feb-2022_5m_True_False.pkl None\n",
-      "Loading from datafeed_augdata_02-Mar-2022_5m_True_False.pkl!\n",
-      "-0.3±2.0\n",
-      "datafeed_augdata_02-Mar-2022_5m_True_False.pkl None\n",
-      "Loading from datafeed_augdata_04-Apr-2022_5m_True_False.pkl!\n",
+      "-0.3±3.0\n",
       "-0.4±2.5\n",
-      "datafeed_augdata_04-Apr-2022_5m_True_False.pkl None\n",
-      "Loading from datafeed_augdata_02-May-2022_5m_True_False.pkl!\n",
-      "-0.2±1.9\n",
-      "datafeed_augdata_02-May-2022_5m_True_False.pkl None\n",
-      "Loading from datafeed_augdata_04-Jul-2022_5m_True_False.pkl!\n",
-      "0.1±2.9\n",
-      "datafeed_augdata_04-Jul-2022_5m_True_False.pkl None\n",
-      "Loading from datafeed_augdata_16-Dec-2022_5m_True_False.pkl!\n",
-      "-0.3±2.5\n",
-      "datafeed_augdata_16-Dec-2022_5m_True_False.pkl None\n"
+      "-0.5±2.3\n",
+      "-0.9±3.5\n",
+      "-0.4±2.1\n",
+      "-0.3±3.2\n",
+      "-0.6±2.5\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.3±3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.4±2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.5±2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.9±3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.4±2.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.3±3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-0.6±2.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0\n",
+       "0  -0.3±3.0\n",
+       "1  -0.4±2.5\n",
+       "2  -0.5±2.3\n",
+       "3  -0.9±3.5\n",
+       "4  -0.4±2.1\n",
+       "5  -0.3±3.2\n",
+       "6  -0.6±2.5"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "for pickle_path in ['realdata/augdata_03-Feb-2022_5m.csv',\n",
+    "ans = []\n",
+    "for pickle_path in ['realdata/augdata_01-Jan-2022_5m.csv',\n",
+    "            'realdata/augdata_03-Feb-2022_5m.csv',\n",
     "          'realdata/augdata_02-Mar-2022_5m.csv', \n",
     "          'realdata/augdata_04-Apr-2022_5m.csv', \n",
     "          'realdata/augdata_02-May-2022_5m.csv',  \n",
@@ -368,7 +418,7 @@
     "          'realdata/augdata_16-Dec-2022_5m.csv']:\n",
     "    pickle_name = pickle_path.split(\"/\")[-1].rstrip('.csv')\n",
     "    pickle_name = f'datafeed_{pickle_name}_True_False.pkl'\n",
-    "    print(f'Loading from {pickle_name}!')\n",
+    "    # print(f'Loading from {pickle_name}!')\n",
     "    feed = pickle.load(open(os.path.join('..', 'algodata', 'realdata', pickle_name), 'rb'))\n",
     "    add_addl_features_feed(feed,tickers=feed.tickers)\n",
     "    add_sym_feature_feed(feed,tickers=feed.tickers)\n",
@@ -378,33 +428,95 @@
     "    bt=Backtest(feed,tickers=feed.tickers,add_features=True,target=.05,stop=.01,txcost=0.001,\n",
     "            loc_exit=True,scan=False,topk=5,deploy=True,save_dfs=False)\n",
     "    bt.run_all(tickers=feed.tickers,model=dtStrat,verbose=False)\n",
-    "    print(pickle_name, get_dist(bt))\n",
-    "    "
+    "    curr = get_dist(bt)\n",
+    "    print(curr)\n",
+    "    ans.append(curr)\n",
+    "\n",
+    "pd.DataFrame({'0': ans})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "12d66448",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "2ff9948d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "ace8dfb7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-0.3±3.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>-0.4±2.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>-0.5±2.3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>-0.9±3.5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>-0.4±2.1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>-0.3±3.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>-0.6±2.5</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          0\n",
+       "0  -0.3±3.0\n",
+       "1  -0.4±2.5\n",
+       "2  -0.5±2.3\n",
+       "3  -0.9±3.5\n",
+       "4  -0.4±2.1\n",
+       "5  -0.3±3.2\n",
+       "6  -0.6±2.5"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pd.DataFrame({'0': ans})"
+   ]
   },
   {
    "cell_type": "code",
