running with additional features, added cols arg to add_features, obtain the optimal cols

--- a/aiagentbase.ipynb
+++ b/aiagentbase.ipynb
@@ -2,10 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "4fad623b-69c2-4eb3-8bcf-1e571030186f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/st/f31rt2_d3n568n9fh7xp6w1m0000gn/T/ipykernel_7304/1545960198.py:3: DeprecationWarning: \n",
+      "\n",
+      "  `numpy.distutils` is deprecated since NumPy 1.23.0, as a result\n",
+      "  of the deprecation of `distutils` itself. It will be removed for\n",
+      "  Python >= 3.12. For older Python versions it will remain present.\n",
+      "  It is recommended to use `setuptools < 60.0` for those Python versions.\n",
+      "  For more details, see:\n",
+      "    https://numpy.org/devdocs/reference/distutils_status_migration.html \n",
+      "\n",
+      "\n",
+      "  from numpy.distutils.misc_util import is_sequence\n"
+     ]
+    }
+   ],
    "source": [
     "from queue import Queue\n",
     "from threading import Thread\n",
@@ -13,6 +31,7 @@
     "import threading\n",
     "# from stable_baselines3 import PPO,DQN,A2C,SAC\n",
     "import gym\n",
+    "import traceback\n",
     "from gym import spaces,Env"
    ]
   },
@@ -444,7 +463,8 @@
     "        def train(self,training_steps):\n",
     "            try:\n",
     "                self.parent.actor.model.learn(total_timesteps=training_steps)\n",
-    "            except:\n",
+    "            except Exception:\n",
+    "                traceback.print_exc()\n",
     "                print('Error during learning')\n",
     "                self.parent.error=True\n",
     "            self.parent.env.actionO.put(self.parent.env.action_space.sample())\n",
