--- a/teststrategy.ipynb
+++ b/teststrategy.ipynb
@@ -425,8 +425,9 @@
     "    for ticker in feed.data:\n",
     "        df = feed.data[ticker]\n",
     "        feed.data[ticker], _, _ = add_features(df)\n",
-    "    bt=Backtest(feed,tickers=feed.tickers,add_features=True,target=.05,stop=.01,txcost=0.001,\n",
+    "    bt=Backtest(feed,tickers=feed.tickers,add_features=True,target=.01,stop=.01,txcost=0.001,\n",
     "            loc_exit=True,scan=False,topk=5,deploy=True,save_dfs=False)\n",
+    "    # Change target to 0.01 for Decision Trees ONLY\n",
     "    bt.run_all(tickers=feed.tickers,model=dtStrat,verbose=False)\n",
     "    curr = get_dist(bt)\n",
     "    print(curr)\n",
