--- a/rlagents.ipynb
+++ b/rlagents.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "025c06e6-0084-4c86-8bcd-d8a33adc0b41",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d7889ded-dd8c-4c73-aadd-687cf98ddbb0",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "27681588-e85b-4818-b7f9-9e8aca7d87cf",
    "metadata": {},
    "outputs": [
@@ -64,12 +64,13 @@
    "source": [
     "from feeds import BackFeed,DataFeed\n",
     "from featfuncs import feat_aug,add_addl_features_feed,add_ta_features_feed,add_sym_feature_feed\n",
-    "from featfuncs import add_global_indices_feed"
+    "from featfuncs import add_global_indices_feed\n",
+    "from add_features import add_features"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "8da69070-9830-44a9-bd5d-0f9800a0c613",
    "metadata": {},
    "outputs": [
@@ -87,7 +88,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "bd8234fa-666c-4768-a090-b01237918b3b",
    "metadata": {},
    "outputs": [],
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "fd63887a-5eb4-4b8e-a915-47a864cc08f8",
    "metadata": {},
    "outputs": [
@@ -117,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "afea58b9-6c56-40c8-a101-32cba908483e",
    "metadata": {},
    "outputs": [],
@@ -132,7 +133,10 @@
     "with open('additional_utils/cols.pkl', 'rb') as f:\n",
     "        d = pickle.load(f)\n",
     "        \n",
-    "COLS=['row_num']+OHLCV_COLS+TA_COLS+d['discrete_cols']+d['pre_discrete_cols']\n",
+    "COLS=['row_num']+OHLCV_COLS+TA_COLS\n",
+    "# d['discrete_cols']+d['pre_discrete_cols']\n",
+    "imp_cols = d['imp_cols']\n",
+    "cols_to_use = d['cols_to_use']\n",
     "# print('Ha')\n",
     "DIM=len(COLS)\n",
     "GDIM=3"
@@ -140,17 +144,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "04784d7b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "8853"
+       "21"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "358be953-26c6-4e1a-ad66-1a30a5db52f5",
    "metadata": {},
    "outputs": [],
@@ -271,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "52934c55-8b6b-48ab-91cb-f01a606844cd",
    "metadata": {},
    "outputs": [],
@@ -296,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "9a1f37c9-c85d-40de-863a-3a29a2adb9f8",
    "metadata": {},
    "outputs": [],
@@ -356,7 +360,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
+   "id": "7d716793",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class RLStratAgentDynFeatures(RLAgent,StratAgent):\n",
+    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False),dim=DIM,verbose=1,win=5,metarl=True, using_cols=None):\n",
+    "        action_space=spaces.MultiDiscrete([3,3,3])\n",
+    "        n_steps,self.use_alt_data=myargs[0],myargs[1]\n",
+    "        if self.use_alt_data:dim=DIM+GDIM\n",
+    "        \n",
+    "        if using_cols is None:\n",
+    "            self.using_cols = COLS + imp_cols\n",
+    "        else:\n",
+    "            self.using_cols = using_cols\n",
+    "        dim = len(self.using_cols)\n",
+    "        \n",
+    "        observation_space=spaces.Box(high=np.inf*np.ones(dim),low=-np.inf*np.ones(dim))\n",
+    "        super().__init__(algoclass,monclass=monclass,action_space=action_space,observation_space=observation_space,\n",
+    "                        n_steps=n_steps,verbose=verbose,win=win,soclass=soclass,metarl=metarl)\n",
+    "        self.actor.percept_to_state=self.percept_to_state\n",
+    "        self.data_cols = self.data_cols\n",
+    "        # self.perception.perceive_reward=self.perceive_reward\n",
+    "    def load_model(self,filepath='./saved_models/PPO0.pth'):\n",
+    "        self.model.policy.load_state_dict(torch.load(filepath))\n",
+    "    def percept_to_state(self,perceived_state):\n",
+    "        # self.logL+=[{'printing perceived_state':perceived_state}]\n",
+    "        percept=perceived_state['percept']\n",
+    "        if self.use_alt_data:\n",
+    "            dstate=torch.tensor(percept[0][self.using_cols].iloc[-1].values)\n",
+    "            gstate=percept[1]\n",
+    "            state=torch.concat((dstate,gstate))\n",
+    "        else: \n",
+    "            state=torch.tensor(percept[self.using_cols].iloc[-1].values)\n",
+    "        return state\n",
+    "    def clear_sar_memory(self):\n",
+    "        if len(self.memory.sar_memory)==0: return\n",
+    "        t0=max(self.time-1,0)\n",
+    "        zero_state=np.zeros(self.memory.sar_memory[0]['state'].shape[0])\n",
+    "        for w in range(self.win):\n",
+    "            if self.time-w in self.memory.sar_memory:\n",
+    "                self.memory.sar_memory[self.time-w]['state']=zero_state\n",
+    "                self.memory.sar_memory[self.time-w]['action']=[0,0,0]\n",
+    "                self.memory.sar_memory[self.time-w]['reward']=0\n",
+    "    def check_entry_batch(self,dfD):\n",
+    "        if self.use_alt_data: \n",
+    "            gfD={t:self.gstateD[dfD[t].iloc[-1]['Date']] if dfD[t].iloc[-1]['Date'] \n",
+    "                 in self.gstateD else torch.zeros(3) for t in dfD}\n",
+    "        decisionsD,stopD,targetD={},{},{}\n",
+    "        if self.act_on_entry(): \n",
+    "            limit={0:.5,1:1,2:2}\n",
+    "            trt=self.scantickers[self.tidx]\n",
+    "            df=dfD[trt]\n",
+    "            # df, _, _ = add_features(df, columns_to_use=cols_to_use)\n",
+    "            # df = df.loc[:, self.using_cols]\n",
+    "            # print(len(df.columns))\n",
+    "            if self.use_alt_data: action=self.act((df,gfD[trt]))\n",
+    "            else: action=self.act(df)\n",
+    "            decisionsD[trt]=action[0]-1\n",
+    "            stopD[trt]=limit[action[1]]\n",
+    "            targetD[trt]=limit[action[2]]\n",
+    "        return decisionsD,stopD,targetD\n",
+    "    def reward(self,reward):\n",
+    "        if type(reward[0])==list: \n",
+    "            if len(reward[0])==0: rew=0\n",
+    "            else: rew=reward[0][0]['ppnl']\n",
+    "            reward=(rew,reward[1],reward[2])\n",
+    "        return super().reward(reward)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "id": "03d705bc-5a03-4690-a0da-c8dd2f99ea8c",
    "metadata": {},
    "outputs": [
@@ -366,7 +442,7 @@
        "{'a': 1, 'b': 2, 'c': 0}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -378,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "60e90844-5b84-45c2-a37a-9d8741cc98ae",
    "metadata": {},
    "outputs": [],
@@ -398,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "0dcef68c-7c7f-4309-bb90-0c155890a0d0",
    "metadata": {},
    "outputs": [],
