used new data, regenerated treees, retrained RL models

--- a/get_cols.ipynb
+++ b/get_cols.ipynb
@@ -66,17 +66,25 @@
     {
      "data": {
       "text/plain": [
-       "{'CMO_14_slope_1_polarity': 2,\n",
-       " 'Open_ma_1-Open_ma_10_val': 2,\n",
-       " 'Volume_ma_5_val': 1,\n",
-       " 'BBB_5_2.0_changelen_val': 1,\n",
-       " 'Open-Close_ma_1-Open-Close_ma_5_val': 3,\n",
-       " 'Volume_ma_20-Volume_ma_50_changelen_val': 1,\n",
+       "{'Open-Close_ma_1-Open-Close_ma_10_val': 5,\n",
+       " 'Close_slope_1_polarity': 3,\n",
+       " 'Volume_ma_10_val': 4,\n",
+       " 'Open-Close_slope_1_val': 2,\n",
+       " 'MACDs_12_26_9_ma_20_changelen_val': 1,\n",
+       " 'Open-Close_ma_1-Open-Close_ma_50_val': 3,\n",
+       " 'BBP_5_2.0_slope_1_changelen_val': 3,\n",
+       " 'BBM_5_2.0_ma_1-BBM_5_2.0_ma_20_changelen_val': 2,\n",
+       " 'Open-High_ma_5-Open-High_ma_20_changelen_val': 1,\n",
+       " 'BBL_5_2.0_ma_5_slope_1_changelen_polarity': 1,\n",
+       " 'High_n-Low_n_ma_50_changelen_val': 1,\n",
+       " 'High_n-Low_n_ma_20_slope_15_changelen_val': 1,\n",
+       " 'BBL_5_2.0_ma_10_slope_15_val': 2,\n",
+       " 'Open_n-Close_n_ma_10_val': 1,\n",
+       " 'Volume_ma_5_slope_5_val': 1,\n",
+       " 'Close_n_slope_1_polarity': 1,\n",
+       " 'Low_ma_5_slope_3_polarity': 1,\n",
        " 'Open_n_ma_10_slope_5_changelen_polarity': 1,\n",
-       " 'Close_slope_1_polarity': 1,\n",
        " 'RSI_14_ma_1_val': 1,\n",
-       " 'CMO_14_changelen_val': 1,\n",
-       " 'High_n-Low_n_ma_50_val': 1,\n",
        " 'Open-Close_polarity': 1,\n",
        " 'Open-High_ma_1-Open-High_ma_50_val': 1,\n",
        " 'Open-Close_ma_1-Open-Close_ma_20_val': 1,\n",
@@ -102,24 +110,32 @@
     {
      "data": {
       "text/plain": [
-       "(['CMO_14_slope_1_polarity',\n",
-       "  'Open_ma_1-Open_ma_10_val',\n",
-       "  'Volume_ma_5_val',\n",
-       "  'BBB_5_2.0_changelen_val',\n",
-       "  'Open-Close_ma_1-Open-Close_ma_5_val',\n",
-       "  'Volume_ma_20-Volume_ma_50_changelen_val',\n",
-       "  'Open_n_ma_10_slope_5_changelen_polarity',\n",
+       "(['Open-Close_ma_1-Open-Close_ma_10_val',\n",
        "  'Close_slope_1_polarity',\n",
+       "  'Volume_ma_10_val',\n",
+       "  'Open-Close_slope_1_val',\n",
+       "  'MACDs_12_26_9_ma_20_changelen_val',\n",
+       "  'Open-Close_ma_1-Open-Close_ma_50_val',\n",
+       "  'BBP_5_2.0_slope_1_changelen_val',\n",
+       "  'BBM_5_2.0_ma_1-BBM_5_2.0_ma_20_changelen_val',\n",
+       "  'Open-High_ma_5-Open-High_ma_20_changelen_val',\n",
+       "  'BBL_5_2.0_ma_5_slope_1_changelen_polarity',\n",
+       "  'High_n-Low_n_ma_50_changelen_val',\n",
+       "  'High_n-Low_n_ma_20_slope_15_changelen_val',\n",
+       "  'BBL_5_2.0_ma_10_slope_15_val',\n",
+       "  'Open_n-Close_n_ma_10_val',\n",
+       "  'Volume_ma_5_slope_5_val',\n",
+       "  'Close_n_slope_1_polarity',\n",
+       "  'Low_ma_5_slope_3_polarity',\n",
+       "  'Open_n_ma_10_slope_5_changelen_polarity',\n",
        "  'RSI_14_ma_1_val',\n",
-       "  'CMO_14_changelen_val',\n",
-       "  'High_n-Low_n_ma_50_val',\n",
        "  'Open-Close_polarity',\n",
        "  'Open-High_ma_1-Open-High_ma_50_val',\n",
        "  'Open-Close_ma_1-Open-Close_ma_20_val',\n",
        "  'Close_n_ma_1-Close_n_ma_50_changelen_polarity',\n",
        "  'High_n_ma_1-High_n_ma_20_changelen_polarity',\n",
        "  'Open-High_ma_1-Open-High_ma_50_polarity'],\n",
-       " 17)"
+       " 25)"
       ]
      },
      "execution_count": 6,
@@ -133,17 +149,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "cols_to_use = ['CMO_14', 'Open', 'Close', 'SMA_20', 'SMA_10', 'Open_n', 'Close_n',\n",
-    "               'High_n', 'Low_n', 'High', 'Low', 'BBB_5_2.0', 'Volume', 'RSI_14']"
+    "               'High_n', 'Low_n', 'High', 'Low', 'BBM_5_2.0', 'Volume', 'RSI_14',\n",
+    "               'MACDs_12_26_9', 'BBL_5_2.0', 'BBP_5_2.0']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,23 +175,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'CMO_14_slope_1_polarity': 2,\n",
-       " 'Open_ma_1-Open_ma_10_val': 2,\n",
-       " 'Volume_ma_5_val': 1,\n",
-       " 'BBB_5_2.0_changelen_val': 1,\n",
-       " 'Open-Close_ma_1-Open-Close_ma_5_val': 3,\n",
-       " 'Volume_ma_20-Volume_ma_50_changelen_val': 1,\n",
+       "{'Open-Close_ma_1-Open-Close_ma_10_val': 5,\n",
+       " 'Volume_ma_10_val': 4,\n",
+       " 'Close_slope_1_polarity': 3,\n",
+       " 'Open-Close_ma_1-Open-Close_ma_50_val': 3,\n",
+       " 'BBP_5_2.0_slope_1_changelen_val': 3,\n",
+       " 'Open-Close_slope_1_val': 2,\n",
+       " 'BBM_5_2.0_ma_1-BBM_5_2.0_ma_20_changelen_val': 2,\n",
+       " 'BBL_5_2.0_ma_10_slope_15_val': 2,\n",
+       " 'MACDs_12_26_9_ma_20_changelen_val': 1,\n",
+       " 'Open-High_ma_5-Open-High_ma_20_changelen_val': 1,\n",
+       " 'BBL_5_2.0_ma_5_slope_1_changelen_polarity': 1,\n",
+       " 'High_n-Low_n_ma_50_changelen_val': 1,\n",
+       " 'High_n-Low_n_ma_20_slope_15_changelen_val': 1,\n",
+       " 'Open_n-Close_n_ma_10_val': 1,\n",
+       " 'Volume_ma_5_slope_5_val': 1,\n",
+       " 'Close_n_slope_1_polarity': 1,\n",
+       " 'Low_ma_5_slope_3_polarity': 1,\n",
        " 'Open_n_ma_10_slope_5_changelen_polarity': 1,\n",
-       " 'Close_slope_1_polarity': 1,\n",
        " 'RSI_14_ma_1_val': 1,\n",
-       " 'CMO_14_changelen_val': 1,\n",
-       " 'High_n-Low_n_ma_50_val': 1,\n",
        " 'Open-Close_polarity': 1,\n",
        " 'Open-High_ma_1-Open-High_ma_50_val': 1,\n",
        " 'Open-Close_ma_1-Open-Close_ma_20_val': 1,\n",
@@ -183,21 +208,14 @@
        " 'Open-High_ma_1-Open-High_ma_50_polarity': 1}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "col_counts"
+    "{k:v for k,v in sorted(col_counts.items(), key=lambda x: -x[1])}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
