--- a/rlagents.ipynb
+++ b/rlagents.ipynb
@@ -423,7 +423,7 @@
     "                df, _, _ = add_features(df, columns_to_use=self.cols_to_use)\n",
     "                # df = df.loc[:, self.using_cols]\n",
     "                self.count_iters += 1\n",
-    "                print(self.count_iters, df.iloc[-1]['Date'])\n",
+    "                # print(self.count_iters, df.iloc[-1]['Date'])\n",
     "\n",
     "            if self.use_alt_data: action=self.act((df,gfD[trt]))\n",
     "            else: action=self.act(df)\n",
