--- a/teststrategy.ipynb
+++ b/teststrategy.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 3,
    "id": "1324a562-0870-4af8-be68-92bfa0406b88",
    "metadata": {},
    "outputs": [],
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 4,
    "id": "00238be4-5614-429f-a717-fcd50c5aafe1",
    "metadata": {},
    "outputs": [],
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "43bcb6f2-f5e9-42ed-81c9-4f18b0183ff7",
    "metadata": {},
    "outputs": [
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "bf9e2989-f187-462b-8e24-5b3c0602dd98",
    "metadata": {},
    "outputs": [],
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "9fc44cef-9c8f-44f3-8571-43a098871edb",
    "metadata": {},
    "outputs": [],
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "0742b6ae-da3c-4d24-a392-762ca2433314",
    "metadata": {},
    "outputs": [],
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "87f1cb97-c120-45e8-b2f1-90e739766b85",
    "metadata": {},
    "outputs": [],
@@ -334,6 +334,72 @@
    "outputs": [],
    "source": [
     "# feed=BackFeed(tickers=tickers,nd=5,nw=4,synthetic=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "48718dc5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing feed\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed=BackFeed(tickers=tickers,nd=5,nw=8,interval='5m',synthetic=True,simple=True)\n",
+    "print('Processing feed')\n",
+    "add_addl_features_feed(feed,tickers=feed.tickers)\n",
+    "add_sym_feature_feed(feed,tickers=feed.tickers)\n",
+    "pickle.dump(feed, open('../algodata/backfeed_True_True_8w.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "c158dcea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing feed\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed=BackFeed(tickers=tickers,nd=5,nw=8,interval='5m',synthetic=True,simple=False)\n",
+    "print('Processing feed')\n",
+    "add_addl_features_feed(feed,tickers=feed.tickers)\n",
+    "add_sym_feature_feed(feed,tickers=feed.tickers)\n",
+    "pickle.dump(feed, open('../algodata/backfeed_True_False_8w.pkl', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "c80f2919",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Processing feed\n"
+     ]
+    }
+   ],
+   "source": [
+    "feed=BackFeed(tickers=tickers,nd=5,nw=4,interval='5m',synthetic=False,simple=False)\n",
+    "print('Processing feed')\n",
+    "add_addl_features_feed(feed,tickers=feed.tickers)\n",
+    "add_sym_feature_feed(feed,tickers=feed.tickers)\n",
+    "pickle.dump(feed, open('../algodata/backfeed_False_False_8w.pkl', 'wb'))"
    ]
   },
   {
