made base changes to reflect with the master branch

--- a/aiagentbase.ipynb
+++ b/aiagentbase.ipynb
@@ -500,7 +500,7 @@
     "            return action\n",
     "        def augment_state(self,state):\n",
     "            if not self.parent.metarl: return state\n",
-    "            if self.parent.time-1 in self.parent.memory.sar_memory:\n",
+    "            if self.parent.time-1 in self.parent.memory.sar_memory and self.parent.time-1>=0:\n",
     "                prev_action=self.parent.memory.sar_memory[self.parent.time-1]['action']\n",
     "                prev_reward=self.parent.memory.sar_memory[self.parent.time-1]['reward']\n",
     "            else:\n",
