--- a/backtest.ipynb
+++ b/backtest.ipynb
@@ -161,12 +161,19 @@
     "            env.set_date(date=date)\n",
     "            self.feed.set_datesQ()\n",
     "            self.feed.init_counters(date,tickers=[ticker])\n",
+    "            self.reset_agent(model)\n",
     "            tot,rews,acts,dfs=episode.run_episode()\n",
     "            self.results[ticker][date]={'tot':tot,'rew':rews,'acts':acts}\n",
     "            if self.save_dfs:self.results[ticker][date]['dfs']=dfs\n",
     "            self.returns[ticker]+=tot\n",
     "            self.total+=tot\n",
-    "            env.reset()      "
+    "            env.reset()  \n",
+    "            \n",
+    "    def reset_agent(self,model):\n",
+    "        if 'model_type' in model.__dict__:\n",
+    "            if model.model_type=='RL':\n",
+    "                model.clear()\n",
+    "                model.time=0    "
    ]
   },
   {
