--- a/trial.ipynb
+++ b/trial.ipynb
@@ -1360,7 +1360,6 @@
     "\n",
     "# Give a small description of the task, End with 'Predict the next 5'\n",
     "\n",
-    "# Investigate what's happening with training: df['r']\n",
     "# Run multiple times on synthetic data and average the results\n",
     "\n",
     "# Summarize the results of the first part\n",
@@ -1373,8 +1372,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "Legend: 100 tokens\n",
-    "Sample with Future: 40 tokens"
+    "# Legend: 100 tokens\n",
+    "# Sample with Future: 40 tokens"
    ]
   }
  ],
