--- a/rlagents.ipynb
+++ b/rlagents.ipynb
@@ -306,9 +306,9 @@
    "outputs": [],
    "source": [
     "class RLStratAgentDyn(RLAgent,StratAgent):\n",
-    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False),dim=DIM,verbose=1,win=5,metarl=True):\n",
+    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False,5),dim=DIM,verbose=1,win=5,metarl=True):\n",
     "        action_space=spaces.MultiDiscrete([3,3,3])\n",
-    "        n_steps,self.use_alt_data=myargs[0],myargs[1]\n",
+    "        n_steps,self.use_alt_data,win=myargs[0],myargs[1],myargs[2]\n",
     "        if self.use_alt_data:dim=DIM+GDIM\n",
     "        observation_space=spaces.Box(high=np.inf*np.ones(dim),low=-np.inf*np.ones(dim))\n",
     "        super().__init__(algoclass,monclass=monclass,action_space=action_space,observation_space=observation_space,\n",
@@ -366,10 +366,10 @@
    "outputs": [],
    "source": [
     "class RLStratAgentDynFeatures(RLAgent,StratAgent):\n",
-    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False),dim=DIM,verbose=1,win=5,metarl=True, using_cols=None,\n",
+    "    def __init__(self,algoclass,soclass,monclass,myargs=(2048,False,5),dim=DIM,verbose=1,metarl=True, using_cols=None,\n",
     "                 dynamic_test=False, cols_to_use=[]):\n",
     "        action_space=spaces.MultiDiscrete([3,3,3])\n",
-    "        n_steps,self.use_alt_data=myargs[0],myargs[1]\n",
+    "        n_steps,self.use_alt_data,win=myargs[0],myargs[1],myargs[2]\n",
     "        if self.use_alt_data:dim=DIM+GDIM\n",
     "        \n",
     "        if using_cols is None:\n",
@@ -437,28 +437,6 @@
     "            else: rew=reward[0][0]['ppnl']\n",
     "            reward=(rew,reward[1],reward[2])\n",
     "        return super().reward(reward)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "03d705bc-5a03-4690-a0da-c8dd2f99ea8c",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'a': 1, 'b': 2, 'c': 0}"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "D={'a':1,'b':2}\n",
-    "{k:D[k] if k in D else 0 for k in ['a','b','c'] }"
    ]
   },
   {
