--- a/rlagents_test.ipynb
+++ b/rlagents_test.ipynb
@@ -470,8 +470,8 @@
    ],
    "source": [
     "use_alt_data=False\n",
-    "agent=RLStratAgentDynFeatures(algorithm,monclass=Mon,soclass=StackedObservations,verbose=1,win=5,\n",
-    "                   metarl=True,myargs=(n_steps,use_alt_data))\n",
+    "agent=RLStratAgentDynFeatures(algorithm,monclass=Mon,soclass=StackedObservations,verbose=1,\n",
+    "                   metarl=True,myargs=(n_steps,use_alt_data,5))\n",
     "agent.use_memory=True #depends on whether RL algorithm uses memory for state computation\n",
     "agent.debug=False\n",
     "if use_alt_data: agent.set_alt_data(alt_data_func=get_alt_data_live)"
@@ -554,8 +554,25 @@
    "outputs": [],
    "source": [
     "bt=Backtest(feed,tickers=feed.tickers,add_features=False,target=5,stop=5,txcost=0.001,\n",
-    "            loc_exit=True,scan=False,topk=5,deploy=deploy,save_dfs=False,\n",
+    "            loc_exit=True,scan=True,topk=5,deploy=deploy,save_dfs=False,\n",
     "            save_func=None)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ac30342",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def compute_avg_episode_rew(bt):\n",
+    "    i,tot=0,0\n",
+    "    for t in bt.results:\n",
+    "        for d in bt.results[t]:\n",
+    "            for r in bt.results[t][d]['rew']:\n",
+    "                tot+=r[1]\n",
+    "                i+=1\n",
+    "    return tot/i,i,tot"
    ]
   },
   {
@@ -888,23 +905,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8b737e58-82d7-43f1-ba14-49f6e5d274f2",
+   "id": "b475441c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "total=sum([bt.results[t][d]['tot'] for t in bt.results for d in bt.results[t]])\n",
-    "# with open('./test_results.txt','a') as f: \n",
-    "#     f.write(f\"{datafile},{modelname},{total}\\n\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7e64f184-d774-4bfa-9394-c2d7bb53547d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "print(f\"Total returns: {total}\\%\")"
+    "avg,n_ep,tot=compute_avg_episode_rew(bt) # Avg episode reward (not day)\n",
+    "print(f\"Average reward {avg} across {n_ep} episodes; total {tot}\")"
    ]
   },
   {
@@ -914,7 +920,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f\"Average returns per day:{total/len(feed.dates)}\")"
+    "print(f\"Average returns per day:{tot/len(feed.dates)}\")"
    ]
   },
   {
